[gd_scene load_steps=2 format=3 uid="uid://explorertutorial"]

[ext_resource type="Script" uid="uid://explorertutorialscript" path="res://dino_explorer/ExplorerTutorial.gd" id="1"]

[node name="ExplorerTutorial" type="CanvasLayer"]
process_mode = 3
layer = 250
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
color = Color(0, 0, 0, 0.8)

[node name="TutorialPanel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -130.0
offset_right = 160.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="TutorialPanel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15
alignment = 1

[node name="Title" type="Label" parent="TutorialPanel/VBox"]
layout_mode = 2
text = "ðŸ§­ DINO EXPLORER TUTORIAL"
horizontal_alignment = 1

[node name="Instructions" type="Label" parent="TutorialPanel/VBox"]
layout_mode = 2
text = "Move around to find friendly dinos and pet them!\nAvoid angry dinos that chase you!\n\nðŸŽ® CONTROLS:\nâ€¢ Arrow Keys / WASD to move\nâ€¢ Touch joystick for mobile\nâ€¢ Approach friendly dinos to pet them\nâ€¢ Avoid red angry dinos!\n\nðŸ¦• TIP: Collect hearts to restore lives!"
horizontal_alignment = 1

[node name="GotItButton" type="Button" parent="TutorialPanel/VBox"]
layout_mode = 2
text = "Got it! Let's Explore"

[node name="SkipButton" type="Button" parent="TutorialPanel/VBox"]
layout_mode = 2
text = "Skip Tutorial"
